# Savi

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
src/aes/: mod.rs
src/audio/: mod.rs
src/audio/capture/: mod.rs
src/audio/playback/: mod.rs
src/audio_peer/: mod.rs
src/signaling/: mod.rs
src/signaling/client/: mod.rs
src/signaling/server/: mod.rs
src/signaling_client/: mod.rs
src/signaling_server/: mod.rs
src/stun/: mod.rs
ui/: app.slint  globals.slint  side_bar.slint
ui/components/: components.slint  peer_component.slint  peers_component.slint
ui/pages/: about_page.slint  connection_page.slint  page.slint  pages.slint  settings_page.slint
