[package]
name = "savi"
version = "0.1.0"
authors = ["Leon"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
aead = "0.5.2"
base64 = "0.21.2"

slint = "1.0.2"

tungstenite = "0.19.0"
tokio-tungstenite = "0.19.0"
tokio = {version="*", features=["full"]}
futures-channel = "0.3.28"
futures-util = "0.3.28"

log = "0.4.5"
env_logger = "0.10.0"
urlencoding = "2.1.2"
url = "2.3.1"

[build-dependencies]
slint-build = "1.0.2"
