[package]
name = "savi"
version = "0.1.0"
authors = ["Leon"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version="1.0.2", features=["renderer-winit-skia","renderer-winit-software","backend-winit-wayland", "software-renderer-systemfonts"]}
flume = "0.10.14"
# for crypto
aes-gcm-siv = "0.11.1"
aead = "0.5.2"
base64 = "0.21.2"

# for networking
tungstenite = "0.19.0"
tokio-tungstenite = "0.19.0"
tokio = {version="*", features=["full"]}
futures-channel = "0.3.28"
futures-util = "0.3.28"
stunclient = "0.4.0"
urlencoding = "2.1.2"
url = "2.3.1"

# for audio
miniaudio = "0.10.0"
opus = "0.3.0"
bincode = "1.3.3"
serde = "1.0.164"
rand = "0.8"
ebur128 = "0.1.8"

# for logging
log = "0.4.5"
env_logger = "0.10.0"

[build-dependencies]
slint-build = "1.0.2"

[patch.crates-io]
miniaudio = { git = 'https://github.com/l1g4v/miniaudio-rs.git' }